[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.4.1"
chrono = "0.4.33"
rppal = "0.17.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
